--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -5,12 +5,12 @@ layout: landing
 import { HomePage } from 'vocs/components'
 
 <HomePage.Root>
-  <HomePage.Logo />
-  <HomePage.Tagline>My Awesome Docs</HomePage.Tagline>
-  <HomePage.InstallPackage name="vocs" type="init" />
-  <HomePage.Description>This is a description of my documentation website.</HomePage.Description>
+  <HomePage.Logo>DSDS</HomePage.Logo>
+  <HomePage.Tagline>Underware.gg</HomePage.Tagline>
+  {/* <HomePage.InstallPackage name="vocs" type="init" /> */}
+  <HomePage.Description>fully on-chain gaming studio.</HomePage.Description>
   <HomePage.Buttons>
-    <HomePage.Button href="/getting-started" variant="accent">Get started</HomePage.Button>
+    <HomePage.Button href="/underware/" variant="accent">Get started</HomePage.Button>
     <HomePage.Button href="https://github.com/wevm/vocs">GitHub</HomePage.Button>
   </HomePage.Buttons>
 </HomePage.Root>
