--- a/docs/pages/underware/index.mdx
+++ b/docs/pages/underware/index.mdx
@@ -1,3 +1,3 @@
 # Underware.gg
 
-We are an on-chain gaming studio...
+An onchain game studio building meaningful, engaging games and open, autonomous worlds. Aligned with Realms.World & Starknet. Makers of LootUnderworld.
