--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -22,8 +22,8 @@ import Logo from '../components/Logo'
   <HomePage.Description>Our games:</HomePage.Description>
   <HomePage.Buttons>
     <HomePage.Button href="/pistols" variant="accent">Pistols at 10 Blocks</HomePage.Button>
-    <HomePage.Button href="/underdark">Underdark</HomePage.Button>
-    <HomePage.Button href="/underworld">Loot Underworld</HomePage.Button>
+    <HomePage.Button href="/underdark" variant="accent">Underdark</HomePage.Button>
+    <HomePage.Button href="/underworld" variant="accent">Loot Underworld</HomePage.Button>
   </HomePage.Buttons>
 </HomePage.Root>
 
