logos on all main pages

--- a/docs/pages/underware/index.mdx
+++ b/docs/pages/underware/index.mdx
@@ -1,3 +1,7 @@
+import Logo from '../../components/Logo'
+
 # Underware.gg
+
+<Logo.Underware big center />
 
 An onchain game studio building meaningful, engaging games and open, autonomous worlds. Aligned with Realms.World & Starknet. Makers of LootUnderworld.
