pistols gameplay, detailed blades and odds

--- a/docs/pages/pistols/for-honour.mdx
+++ b/docs/pages/pistols/for-honour.mdx
@@ -1,3 +1,19 @@
 # For Honour!
 
-In development...
+All about dueling, honour and archetypes...
+
+
+## Honour Above All
+
+
+
+## Honourable Lords 👑
+
+
+
+## Villainous Scoundrels 👺
+
+
+
+## Slippery Tricksters 🃏
+
