--- a/docs/pages/pistols/gameplay.mdx
+++ b/docs/pages/pistols/gameplay.mdx
@@ -1,2 +1,29 @@
 # Gameplay
 
+
+## Challenges
+
+A **Challenge** is a dispute between two duelists. Let's call them...
+
+* **Duelist A** (the challenger)
+* **Duelist B** (the challenged)
+
+
+
+## Rounds
+
+Each **Challenge** can be resolved in one or two **rounds**:
+
+* Round 1: **Pistols**, or **paces**
+* Round 2: **Blades** and other **tactics**
+
+
+
+
+## Wager & Fees
+
+
+
+## Gameplay
+
+
