--- a/docs/pages/pistols/index.mdx
+++ b/docs/pages/pistols/index.mdx
@@ -2,8 +2,8 @@ import Logo from '../../components/Logo'
 
 # Pistols at 10 Blocks
 
-
 <Logo.Pistols big center />
 
+Got a beef!?
 
-In development...
+Solve it over pistols at dawn...
