--- a/docs/pages/pistols/blades-round.mdx
+++ b/docs/pages/pistols/blades-round.mdx
@@ -2,7 +2,8 @@
 
 On the **Blades Round**, there are several blades and tactics to choose from.
 
-Their efficiency is determine by their own **CRIT** and **HIT** chances (see [The Odds](/pistols/the-odds))
+Their efficiency is determine by their own **CRIT** and **HIT** chances.
+(learn more at the [Advanced](/pistols/advanced) guide)
 
 Each can take one or two slots (or strikes). For example...
 
