--- a/docs/pages/pistols/for-honour.mdx
+++ b/docs/pages/pistols/for-honour.mdx
@@ -6,14 +6,16 @@ All about dueling, honour and archetypes...
 ## Honour Above All
 
 
-
-## Honourable Lords 👑
-
+## Archetypes
 
 
-## Villainous Scoundrels 👺
+### Honourable Lords 👑
 
 
 
-## Slippery Tricksters 🃏
+### Villainous Scoundrels 👺
+
+
+
+### Slippery Tricksters 🃏
 
