blades results sync

--- a/docs/pages/pistols/blades-round.mdx
+++ b/docs/pages/pistols/blades-round.mdx
@@ -67,15 +67,14 @@ Not looking good? Just flee...
 
 > 1 strike, on slot 1
 
-* The opponent gets a **10 paces shot** at you
 * Your **Honour** on this duel drops to **Zero**
+* The opponent gets a **10 paces shot** at you
+* Wager is split back to each duelist
 * Victory to the opponent
-* Wager to the opponent
 
 If both duelists flee...
 
 * Ends in a Draw
-* Wager is split back
 
 
 ## Steal
@@ -83,10 +82,10 @@ Take the money and run!
 
 > 1 strike, on slot 1
 
-* The opponent gets a **10 paces shot** at you
 * Your **Honour** on this duel drops to **Zero**
-* Victory to the opponent
+* The opponent gets a **10 paces shot** at you
 * Wager to the stealer
+* Victory to the opponent
 
 If both duelists steal...
 
@@ -96,15 +95,14 @@ If both duelists steal...
 
 
 ## Seppuku
-The most honourable exit is a **ceremonial suicide**!
+When things go wrong, the most honourable exit is a **ceremonial suicide**!
 
 > 1 strike, on slot 1
 
 * Your **Honour** on this duel goes to **10**
-* Victory to the opponent
 * Wager to the opponent
+* Ends in a Draw
 
 If both duelists commit Seppuku...
 
-* Ends in a Draw
-* Wager is split back
+* Wager is split back to each duelist
