--- a/docs/pages/pistols/for-honour.mdx
+++ b/docs/pages/pistols/for-honour.mdx
@@ -8,6 +8,13 @@ All about dueling, honour and archetypes...
 
 ## Archetypes
 
+### Archetype levels
+
+Each archetype calculated
+
+This is like an internal **Honour** system for each archetype,
+giving you cross-game archetype bonuses (more on [advanced](/pistols/advanced)).
+
 
 ### Honourable Lords 👑
 
