--- a/docs/pages/pistols/blades-round.mdx
+++ b/docs/pages/pistols/blades-round.mdx
@@ -20,8 +20,8 @@ This is the deadliest weapon! Can execute the opponent in just one blow. But alw
 
 > 1 strike, always on on slot 2
 
-* Takes 3 damage in a **crit** (execution!)
-* Takes 2 damages in a **hit**
+* Takes 3 injury points in a **crit** (execution!)
+* Takes 2 injury points in a **hit**
 
 
 ## Light Blade / Fast Blow
@@ -29,27 +29,27 @@ Deadly to an injured opponent, or when striking twice in a row.
 
 > 2 strikes
 
-* Takes 2 damages in a **crit**
-* Takes 1 damage in a **hit**
+* Takes 2 injury points in a **crit**
+* Takes 1 injury point in a **hit**
 
 ## Block / Shield
 Blocks strikes from the Heavy and Fast blades.
 
 > 2 strikes
 
-* Blocks 2 damages in a **crit**
-* Blocks 1 damage in a **hit**
+* Blocks 2 injury points in a **crit**
+* Blocks 1 injury point in a **hit**
 
 
-## Blades Damage
+## Blades Injury
 
-Blades damage are constant, according to this table:
+Blades injury points are constant, according to this table:
 
 |             | Crit              | Hit               |
 |-------------|:-----------------:|:-----------------:|
-| Heavy Blade | Inflicts 3 Damage | Inflicts 2 Damage |
-| Light Blade | Inflicts 2 Damage | Inflicts 1 Damage |
-| Block       | Blocks 2 Damage   | Blocks 1 Damage   |
+| Heavy Blade | Inflicts 3 Injury | Inflicts 2 Injury |
+| Light Blade | Inflicts 2 Injury | Inflicts 1 Injury |
+| Block       | Blocks 2 Injury   | Blocks 1 Injury   |
 
 
 
