updated variable names according to simulate_chances() response

--- a/docs/pages/pistols/advanced.mdx
+++ b/docs/pages/pistols/advanced.mdx
@@ -68,10 +68,10 @@ Executed for the **Early Duelist**, or in parallel for both duelists if shooting
 
 Each action has its own crit chances, in percentages:
 
-* Pistol at 1 pace: <Code>action_crit_chance = {constants.PISTOLS_KILL_AT_STEP_1}%</Code>
-* Pistol at 10 paces: <Code>action_crit_chance = {constants.PISTOLS_KILL_AT_STEP_10}%</Code>
+* Pistol at 1 pace: <Code>crit_base_chance = {constants.PISTOLS_KILL_AT_STEP_1}%</Code>
+* Pistol at 10 paces: <Code>crit_base_chance = {constants.PISTOLS_KILL_AT_STEP_10}%</Code>
 * Pistol chances between 1 and 10 paces are interpolated.
-* Blades crit chance is constant: <Code>action_crit_chance = {constants.BLADES_CRIT}%</Code>
+* Blades crit chance is constant: <Code>crit_base_chance = {constants.BLADES_CRIT}%</Code>
 
 ### Cross-Game Crit Bonus
 
@@ -92,9 +92,9 @@ crit_bonus = max_crit_bonus * min(archetype_level, total_duels)
 
 This bonus is given on the **Pistols Round** according to the duelist **archetype** and **shooting order**.
 
-* 👑 Honourable: <Code>match_bonus = {constants.EARLY_LORD_CRIT_BONUS}%</Code> when shooting **early**.
+* 👑 Honourable: <Code>crit_match_bonus = {constants.EARLY_LORD_CRIT_BONUS}%</Code> when shooting **early**.
 * 🃏 Trickster: No match bonus
-* 👺 Villainous: <Code>match_bonus = {constants.LATE_VILLAIN_CRIT_BONUS}%</Code> when shooting **late**.
+* 👺 Villainous: <Code>crit_match_bonus = {constants.LATE_VILLAIN_CRIT_BONUS}%</Code> when shooting **late**.
 
 The rationale here is to give an extra strategy for **Honourable vs. Honourable** and **Villainous vs. Villainous** duels.
 A surprise factor for whenever they have a chance to slip outside of their predictable move.
@@ -103,9 +103,9 @@ A surprise factor for whenever they have a chance to slip outside of their predi
 
 Tricksters do not have match crit bonus, but they inflict a penalty to other archetypes.
 
-* 👑 Honourable: <Code>trickster_penalty = {constants.TRICKSTER_CRIT_PENALTY}%</Code> when the opponent is a Trickster.
+* 👑 Honourable: <Code>crit_trickster_penalty = {constants.TRICKSTER_CRIT_PENALTY}%</Code> when the opponent is a Trickster.
 * 🃏 Trickster: No penalty
-* 👺 Villainous: <Code>trickster_penalty = {constants.TRICKSTER_CRIT_PENALTY}%</Code> when the opponent is a Trickster.
+* 👺 Villainous: <Code>crit_trickster_penalty = {constants.TRICKSTER_CRIT_PENALTY}%</Code> when the opponent is a Trickster.
 
 ### Crit Decision
 
@@ -113,8 +113,8 @@ Tricksters do not have match crit bonus, but they inflict a penalty to other arc
 * To avoid over-penalties, final chances will never be less than half the action chance.
 
 ```rust
-crit_chances = (action_crit_chance + crit_bonus + match_bonus - trickster_penalty)
-crit_chances = max(crit_chances, action_crit_chance/2)
+crit_chances = (crit_base_chance + crit_bonus + crit_match_bonus - crit_trickster_penalty)
+crit_chances = max(crit_chances, crit_base_chance/2)
 ```
 
 * Dices roll... 🎲
@@ -134,10 +134,10 @@ health = previous_health - max(injury - block, 0)
 
 Each action has its own hit chances, in percentages:
 
-* Pistol at 1 pace: <Code>action_hit_chance = {constants.PISTOLS_HIT_AT_STEP_1}%</Code>
-* Pistol at 10 paces: <Code>action_hit_chance = {constants.PISTOLS_HIT_AT_STEP_10}%</Code>
+* Pistol at 1 pace: <Code>hit_base_chance = {constants.PISTOLS_HIT_AT_STEP_1}%</Code>
+* Pistol at 10 paces: <Code>hit_base_chance = {constants.PISTOLS_HIT_AT_STEP_10}%</Code>
 * Pistol chances between 1 and 10 paces are interpolated.
-* Blades hit chance is constant: <Code>action_hit_chance = {constants.BLADES_HIT}%</Code>
+* Blades hit chance is constant: <Code>hit_base_chance = {constants.BLADES_HIT}%</Code>
 
 ### Cross-Game Hit Bonus
 
@@ -158,9 +158,9 @@ hit_bonus = max_hit_bonus * min(archetype_level, total_duels)
 
 Tricksters do not have match hit bonus, but they inflict a penalty to other archetypes.
 
-* 👑 Honourable: <Code>trickster_penalty = {constants.TRICKSTER_HIT_PENALTY}%</Code> when the opponent is a Trickster.
+* 👑 Honourable: <Code>hit_trickster_penalty = {constants.TRICKSTER_HIT_PENALTY}%</Code> when the opponent is a Trickster.
 * 🃏 Trickster: No penalty
-* 👺 Villainous: <Code>trickster_penalty = {constants.TRICKSTER_HIT_PENALTY}%</Code> when the opponent is a Trickster.
+* 👺 Villainous: <Code>hit_trickster_penalty = {constants.TRICKSTER_HIT_PENALTY}%</Code> when the opponent is a Trickster.
 
 ### Injury Penalty
 
@@ -169,7 +169,7 @@ A penalty is inclicted on injured duelists, from an **early pistol shot** or fro
 * Pistols and blades: <Code>penalty_per_injury = {constants.HIT_PENALTY_PER_DAMAGE}%</Code>
 
 ```rust
-injury_penalty = (penalty_per_injury * injury_taken)
+hit_injury_penalty = (penalty_per_injury * injury_taken)
 ```
 
 ### Hit Decision
@@ -178,8 +178,8 @@ injury_penalty = (penalty_per_injury * injury_taken)
 * To avoid over-penalties, final chances will never be less than half the action chance.
 
 ```rust
-hit_chances = (action_hit_chance + hit_bonus - trickster_penalty - injury_penalty)
-hit_chances = max(hit_chances, action_hit_chance/2)
+hit_chances = (hit_base_chance + hit_bonus - hit_trickster_penalty - hit_injury_penalty)
+hit_chances = max(hit_chances, hit_base_chance/2)
 ```
 
 * Dices roll... 🎲
@@ -191,12 +191,12 @@ Blades injury are constant, according to the [Blades Injury table](/pistols/blad
 
 Pistols injury is calculated from a lethal chance:
 
-* Pistol at 1 pace: <Code>lethal_chance = {constants.PISTOLS_LETHAL_AT_STEP_1}%</Code>
-* Pistol at 10 paces: <Code>lethal_chance = {constants.PISTOLS_LETHAL_AT_STEP_10}%</Code>
+* Pistol at 1 pace: <Code>lethal_base_chance = {constants.PISTOLS_LETHAL_AT_STEP_1}%</Code>
+* Pistol at 10 paces: <Code>lethal_base_chance = {constants.PISTOLS_LETHAL_AT_STEP_10}%</Code>
 * Pistol chances between 1 and 10 paces are interpolated.
 * 👑 Honourable: Have a <Code>{constants.LORD_LETHAL_PENALTY}%</Code> less chance to get a lethal hit when shooting second.
 * Then we use the same hit dice result...
-* If `hit_chances <= lethal_chance`, inflicts `2` injury points, else just `1`.
+* If `hit_chances <= lethal_base_chance`, inflicts `2` injury points, else just `1`.
 
 Apply injury and block to opponent's health.
 
