updated logo and studio description

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -9,7 +9,7 @@ import Logo from '../components/Logo'
 <HomePage.Root>
   <Logo.Underware big />
   {/* <HomePage.Logo /> */}
-  <h1 className='vocs_HomePage_title'>Underware.gg</h1>
+  {/* <h1 className='vocs_HomePage_title'>Underware.gg</h1> */}
   {/* <HomePage.Tagline>Underware.gg</HomePage.Tagline> */}
   {/* <HomePage.InstallPackage name="vocs" type="init" /> */}
   
