--- a/docs/pages/underware/index.mdx
+++ b/docs/pages/underware/index.mdx
@@ -9,3 +9,5 @@ Underware builds meaningful, engaging, and atmospheric games.
 Our work explores novel mechanics and pushes the edges of what is possible on top of open, distributed systems, and within autonomous worlds that coalesce from the living contributions of their participants.
 
 We are building out [The Underworld](/underworld), a gritty and rich autonomous (under)world of danger, mystery, and story, that extends [Realms: Eternum](https://realms.world/games/realms-eternum) with new mechanisms and an expansive underground realm, [The Underdark](/underdark).
+
+### [@underware_gg](https://x.com/underware_gg)
