--- a/docs/pages/underware/team.mdx
+++ b/docs/pages/underware/team.mdx
@@ -1,2 +1,12 @@
 # Team
 
+* Recipromancer (Rob Morris) [@recipromancer](https://x.com/recipromancer)
+* Mataleone (Roger Sodre) [@matalecode](https://x.com/matalecode)
+* Jubilee
+* Amaro Koberle [@AmaroKoberle](https://x.com/AmaroKoberle)
+* Mononoke 
+* FortunaRegem
+* Mula Satya [@yunozos](https://x.com/yunozos)
+* Parsa
+* Nejc [@heynejc](https://x.com/heynejc)
+
